[package]
name = "avr-test"
version = "0.1.0"
edition = "2024"

[dependencies]
avr-device = { version = "0.8.1", features = ["at90can128", "rt"] }
panic-halt = "1.0.0"

[profile.release]
panic = "abort"
lto = true
opt-level = "s" # 's' or 'z' for small binary size (critical for AVR)

# Local Variables:
# jinx-local-words: "avr"
# End:
